--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     height          : auto;
     width           : 100%;
     background-color: rgb(var(--black));
-    border-top   : 0.15vw solid rgba(var(--white), 0.4);
+    border-top      : 0.15vw solid rgba(var(--white), 0.4);
 }
 
 .page:first-of-type {
@@ -62,7 +62,7 @@ body {
 
 #navbar {
     position        : sticky;
-    background-color: rgba(var(--white), 0.05);
+    background-color: rgba(var(--black), 0.4);
     z-index         : 100;
     height          : 6vw;
     width           : 65vw;
@@ -202,10 +202,17 @@ body {
 }
 
 /* the third page */
-.page.third > div:first-of-type > div:first-of-type {
-    --yellow: hsl(60, 50%, 50%);
-    --green : hsl(120, 50%, 25%);
-    --red   : hsl(0, 50%, 50%);
+.page.third > div:first-of-type {
+    & > div:first-of-type { /* track & rank */
+        --yellow: hsl(60, 50%, 50%);
+        --green : hsl(120, 50%, 25%);
+        --red   : hsl(0, 50%, 50%);
+
+        & > div:nth-of-type(2) { /* #skills-items-better's parent div */
+            margin-top: 1.5vw;
+            font-size : 1.5vw;
+        }
+    }
 }
 
 #track {
@@ -246,29 +253,39 @@ body {
 }
 
 #skills-items {
-    display     : flex;
-    margin-top  : 2.25vw;
+    display      : flex;
+    align-items  : center;
+    margin-top   : 2.25vw;
     margin-bottom: 2.25vw;
-    width       : 73vw; /* #track's width */
-    aspect-ratio: 16 / 4.5;
-    overflow-x  : scroll;
-    overflow-y  : hidden; /* it's impossible for the container to overflow vertically tho... */
+    width        : 73vw; /* #track's width */
+    aspect-ratio : 16 / 4.5;
+    overflow-x   : auto;
+    overflow-y   : hidden; /* it's impossible for the container to overflow vertically tho... */
+
+    &.better > div.svgContainer {
+        border: 1px solid red;
+    }
 }
 
 #skills-items > div.svgContainer {
-    display     : flex;
-    margin-right: 5vw;
-    transition  : all 0.3s ease-out;
-    filter      : grayscale(100%);
-    transform   : scale(0.7);
+    display        : flex;
+    height         : calc(73vw / 16 * 4.5 * 0.9); /* the height of the container */
+    aspect-ratio   : 1 / 1;
+    align-items    : center;
+    justify-content: center;
+    transition     : all 0.3s ease-out;
+    filter         : grayscale(100%);
+    transform      : scale(0.7);
+    box-sizing     : border-box;
 
     &:hover {
         filter   : none;
         transform: scale(0.85);
     }
 
-    &:last-child {
-        margin-right: 0;
+    & > svg {
+        height      : inherit;
+        aspect-ratio: 1 /1 ;
     }
 }
 
